# rcforbs-macos-arm64-port

./: .gitattributes  .gitignore  README.md
android/: gradlew  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  speex_jni.c
android/app/src/main/cpp/speex/: config.h
docs/: PROTOCOL_SPECIFICATION.md
ipadOS/RCForb/: Package.swift  RCForb.entitlements  project.yml
ipadOS/RCForb/RCForb.xcodeproj/: project.pbxproj
ipadOS/RCForb/Resources/: app.icns
ipadOS/RCForb/Sources/App/: FontRegistration.swift  Info.plist  RCForbApp.swift
ipadOS/RCForb/Sources/Audio/: AudioBridge.swift  OpusDecoder.swift  OpusEncoder.swift  SpeexDecoder.swift  SpeexEncoder.swift
ipadOS/RCForb/Sources/Models/: RadioState.swift
ipadOS/RCForb/Sources/Networking/: TCPClientV7.swift  UDPClient.swift
ipadOS/RCForb/Sources/Protocol/: MD5.swift
ipadOS/RCForb/Sources/Services/: AuthService.swift  ConnectionManager.swift  LobbyService.swift
macOS/RCForb/: Package.swift  RCForb.entitlements
macOS/RCForb/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOS/RCForb/Resources/: app.icns
macOS/RCForb/Sources/App/: ColorExtensions.swift  ContentView.swift  FontRegistration.swift  Info.plist  RCForbApp.swift  ResourceBundle.swift
macOS/RCForb/Sources/Audio/: AudioBridge.swift  OpusDecoder.swift  OpusEncoder.swift  SpeexDecoder.swift  SpeexEncoder.swift
macOS/RCForb/Sources/Models/: DataTypes.swift  PeripheralState.swift  ServerInfoState.swift
(+80 files in other folders)
